@@ -636,4 +636,9 @@
     \item add error handling to close GdsGenotypeReader and GdsIntensityReader gds files if they fail the validity method check
   }   
 }
+\section{Changes in version 1.17.9}{
+  \itemize{
+    \item do not compute qbeta for all points in qqPlot if thinning
+  }   
+}
 
